fix alignment

--- a/app/stylesheets/partials/_page.scss
+++ b/app/stylesheets/partials/_page.scss
@@ -126,8 +126,9 @@ h1 {
     font-weight: 700;
     width: 140px;
     height: 50px;
-    margin-right: 66px;
-    margin-top: 30px;
+	position:absolute;
+	right:60px;
+	top:30px;
     .logo {
         width: 50px;
     }
@@ -156,7 +157,7 @@ h1 {
         padding-bottom:25px;
     }
     #sidebar-right{
-        width:260px;
+        width:275px;
 		height:492px;
 		
         margin-right:60px;
